--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,7 @@
-tests/ export-ignore
-.editorconfig export-ignore
-.gitattributes export-ignore
-.gitignore export-ignore
-composer.lock export-ignore
-
 * text=auto
+
+/tests/ export-ignore
+/.editorconfig export-ignore
+/.gitattributes export-ignore
+/.gitignore export-ignore
+/phpunit.xml.dist export-ignore
