--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   },
   "require-dev": {
     "php-fn/test": "^1",
-
+    "docker-xampp/bin": "^1",
     "roave/security-advisories": "dev-master"
   },
   "autoload": {
