--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "php": ">=7.1"
   },
   "require-dev": {
-    "php-fn/test": "2.x-dev",
+    "php-fn/test": "^2.0",
+    "php-coveralls/php-coveralls": "^2.1",
     "roave/security-advisories": "dev-master"
   },
   "autoload": {
