--- a/composer.json
+++ b/composer.json
@@ -34,5 +34,8 @@
     "branch-alias": {
       "dev-master": "2.x-dev"
     }
+  },
+  "scripts": {
+    "test": "php -d error_reporting=22527 vendor/bin/phpunit tests/"
   }
 }
