--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "homepage": "https://github.com/php-fn/php-fn-cli",
   "require": {
-    "php-fn/di": "^2.0",
+    "php-fn/di": "^3.0",
     "symfony/console": "^3.4",
     "phpdocumentor/reflection-docblock": "^4.3",
 
@@ -11,13 +11,13 @@
     "php": ">=7.1"
   },
   "require-dev": {
-    "php-fn/test": "^2.0",
+    "php-fn/test": "^3.0",
     "php-coveralls/php-coveralls": "^2.1",
     "roave/security-advisories": "dev-master"
   },
   "autoload": {
     "psr-4": {
-      "fn\\": ["src/fn"]
+      "php\\": ["src/php"]
     },
     "files": [
       "src/autoload-files.php"
@@ -25,7 +25,7 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "fn\\": ["tests/fn"]
+      "php\\": ["tests/php"]
     }
   },
   "minimum-stability": "dev",
