--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,9 @@
-; Unix-style newlines
 [*]
-end_of_line = LF
-
-[*.php]
-indent_style = space
+charset = utf-8
+end_of_line = lf
 indent_size = 4
+indent_style = space
+insert_final_newline = false
+max_line_length = 120
+tab_width = 4
+trim_trailing_whitespace = true
